@@ -1,3 +1,7 @@
+2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/slur-scoring.cc (get_best_curve): handle opt_idx < 0 case.
+
 2006-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/main.cc (main): Debugging aid: catch exceptions.
